Add Instagram API fallback and improve authentication handling

--- a/instaloader_pwa/index.html
+++ b/instaloader_pwa/index.html
@@ -45,6 +45,11 @@
                 <h3>Profile Information</h3>
                 <div id="profileContent"></div>
             </div>
+
+            <div class="preview-section" id="previewSection" style="display: none;">
+                <h3>Download Preview</h3>
+                <div id="previewContent"></div>
+            </div>
         </main>
     </div>
     
